Update Login permission & go to next dynamically next page
Update Login permission & go to next dynamically next page

--- a/src/app/router-log-in/router-log-in.component.css
+++ b/src/app/router-log-in/router-log-in.component.css
@@ -151,3 +151,8 @@ a{color:inherit;text-decoration:none}
 	text-align:center;
     color: #1161ee;
 }
+
+.row{
+	color: red;
+	font-style: italic;
+}
