Add Custom Directive
Add Custom Directive

--- a/src/app/router-product/rolls-royce/rolls-royce.component.html
+++ b/src/app/router-product/rolls-royce/rolls-royce.component.html
@@ -8,6 +8,10 @@
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
                     card's content.Some quick example text to build on the card title and make up the bulk of the
                     card's content.</p>
+
+                    <!-- It Is Custom Directive Using the Shared module & feature module -->
+                    <p appCustomDire>It Is Custom Directive Using the Shared module & feature module</p>
+
                 <div class="text-center">
                     <a routerLink="rollsRoyce" class="btn btn-success">Know more</a>
                 </div>
@@ -33,13 +37,13 @@
             <img class="card-img-top" src="../../../assets/images/rolls3.jpg" alt="Card image cap">
             <div class="card-body">
                 <h5 class="card-title">Rolls-Royce</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                <p class="card-text" >Some quick example text to build on the card title and make up the bulk of the
                     card's content.Some quick example text to build on the card title and make up the bulk of the
                     card's content.</p>
                 <div class="text-center">
                     <a routerLink="rollsRoyce" class="btn btn-success">Know more</a>
                 </div>
-            </div>
+            </div> 
         </div>
     </div>
     <div class="text-center mt-3">
