Add new tab by product
Add new tab by product

--- a/src/app/router-outlet/router-outlet.component.html
+++ b/src/app/router-outlet/router-outlet.component.html
@@ -13,6 +13,7 @@
         <li class="nav-item"><a class="nav-link" routerLinkActive="active" [routerLink]="['/contactUs']">Contact Us</a></li>
         <li class="nav-item"><a class="nav-link" routerLinkActive="active" [routerLink]="['/cars']">Cars</a></li>
         <li class="nav-item"><a class="nav-link" routerLinkActive="active" routerLink="posts">Posts</a></li>
+        <li class="nav-item"><a class="nav-link" routerLinkActive="active" routerLink="products">Products</a></li>
         <li class="nav-item"><a class="nav-link" routerLinkActive="active" routerLink="404notfound">Information</a></li>
         <input type="search" placeholder="Search..." >
   </nav>
