Use Lazy Loading & Create Feature Module
Use Lazy Loading & Create Feature Module

--- a/src/app/router-about-us/router-about-us.component.html
+++ b/src/app/router-about-us/router-about-us.component.html
@@ -1,1 +1,22 @@
-<p>router-about-us works!</p>
+<div class="page-area mt-1">
+    <div class="text-center">
+        <h2>Information</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente est illum reiciendis modi expedita</p>
+    </div>
+    <hr class="mb-3">
+    <div class="row">
+        <div class="col-md-12">
+            <div class="card">
+                <img class="card-img-top" src="../../assets/images/rollsRoyce.jpg" alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">Information</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                        card's content.</p>
+                    <div class="text-center">
+                        <a routerLink="information" class="btn btn-success">Know more</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>            
