Add tab Service
Add tab Service

--- a/src/app/router-outlet/router-outlet.component.html
+++ b/src/app/router-outlet/router-outlet.component.html
@@ -14,7 +14,8 @@
         <li class="nav-item"><a class="nav-link" routerLinkActive="active" [routerLink]="['/cars']">Cars</a></li>
         <li class="nav-item"><a class="nav-link" routerLinkActive="active" routerLink="posts">Posts</a></li>
         <li class="nav-item"><a class="nav-link" routerLinkActive="active" routerLink="products">Products</a></li>
-        <li class="nav-item"><a class="nav-link" routerLinkActive="active" routerLink="404notfound">Information</a></li>
+        <li class="nav-item"><a class="nav-link" routerLinkActive="active" routerLink="service">Service</a></li>
+        <li class="nav-item"><a class="nav-link" routerLinkActive="active" routerLink="404notfound">Wild Card</a></li>
         <input type="search" placeholder="Search..." >
   </nav>
   
