Added authGuard tabs
Added authGuard tabs

--- a/src/app/router-outlet/router-outlet.component.html
+++ b/src/app/router-outlet/router-outlet.component.html
@@ -15,8 +15,13 @@
         <li class="nav-item"><a class="nav-link" routerLinkActive="active" routerLink="posts">Posts</a></li>
         <li class="nav-item"><a class="nav-link" routerLinkActive="active" routerLink="products">Products</a></li>
         <li class="nav-item"><a class="nav-link" routerLinkActive="active" routerLink="service">Service</a></li>
-        <li class="nav-item"><a class="nav-link" routerLinkActive="active" routerLink="404notfound">Wild Card</a></li>
-        <input type="search" placeholder="Search..." >
+        <li class="nav-item"><a class="nav-link" routerLinkActive="active" routerLink="canActive">CanActive</a></li>
+        <li class="nav-item"><a class="nav-link" routerLinkActive="active" routerLink="registrationForm">Registration Form</a></li>
+        <li class="nav-item"><a class="nav-link" routerLinkActive="active" routerLink="canActiveChild">CanActiveChild</a></li>
+        <li class="nav-item"><a class="nav-link" routerLinkActive="active" routerLink="resolve">Resolve</a></li>
+        <li class="nav-item"><a class="nav-link" routerLinkActive="active" routerLink="canLoad">CanLoad</a></li>
+        <!-- <li class="nav-item"><a class="nav-link" routerLinkActive="active" routerLink="404notfound">Wild Card</a></li> -->
+        <!-- <input type="search" placeholder="Search..." > -->
   </nav>
   
     <router-outlet></router-outlet>
