--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -178,5 +178,20 @@
 
  <!-- Router Outlet (Removing there router outlet tag & Inserting router outlet component ) -->
 
-<app-router-outlet></app-router-outlet>
+<!-- <app-router-outlet></app-router-outlet> -->
 
+
+
+                                  <!-- CURD Operation -->
+
+<div class="text-center py-5">
+       <!-- <app-delete-post></app-delete-post> -->
+</div>
+
+<!-- <app-get-api-beverages-and-desserts></app-get-api-beverages-and-desserts> -->
+
+<!-- <app-simple-curd-op></app-simple-curd-op> -->
+
+<!-- <app-fruits></app-fruits> -->
+
+<app-cricket></app-cricket>
