--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -194,4 +194,6 @@
 
 <!-- <app-fruits></app-fruits> -->
 
-<app-cricket></app-cricket>
+<!-- <app-cricket></app-cricket> -->
+
+<app-songs-get></app-songs-get>
