Update Post component
Update Post component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -178,15 +178,17 @@
 
  <!-- Router Outlet (Removing there router outlet tag & Inserting router outlet component ) -->
 
-<!-- <app-router-outlet></app-router-outlet> -->
+<app-router-outlet></app-router-outlet>
 
 
 
                                   <!-- CURD Operation -->
 
-<div class="text-center py-5">
-       <!-- <app-delete-post></app-delete-post> -->
-</div>
+         <!-- Delete Data -->
+
+  <!-- <app-delete-post></app-delete-post> -->
+
+                      <!-- Get Data -->
 
 <!-- <app-get-api-beverages-and-desserts></app-get-api-beverages-and-desserts> -->
 
@@ -196,4 +198,8 @@
 
 <!-- <app-cricket></app-cricket> -->
 
-<app-songs-get></app-songs-get>
+<!-- <app-songs-get></app-songs-get> -->
+
+
+                        <!-- Post  Data -->
+<app-post-firebase></app-post-firebase>
