post(),delete()& get() Components using Firebase (Curd)
post(),delete()& get() Components using Firebase (Curd)

--- a/src/app/router-registration-form/router-registration-form.component.html
+++ b/src/app/router-registration-form/router-registration-form.component.html
@@ -1,28 +1,34 @@
 <div class="conatainer">
     <div class="row justify-content-center">
         <div class="col-md-4 text-left rounded shadow ">
+            <div class="col">
 
-            <form [formGroup]="reactiveForm" (ngSubmit)="onSubmit()">
-                <h2>Reactive Form</h2>                                         
+                <form [formGroup]="reactiveForm" (ngSubmit)="onSubmit()">
+                    <h2>Reactive Form</h2>
 
-                <div class="col-md-7 py-2">
-                    <label for="">Username</label>
-                    <input class="form-control" type="text" formControlName="userName"
-                        placeholder="Enter your username">
-                          <small *ngIf="!reactiveForm.get('userName').valid && reactiveForm.get('userName').touched">
-                            <span *ngIf="reactiveForm.get('userName').errors['required']"> Please enter valid Username</span>
-                             <span *ngIf="reactiveForm.get('userName').errors['namesNotAllowed']">{{reactiveForm.get('userName').value}} - is not allowed</span>
-                          </small>
-                </div>
-                <div class="form-group py-2">
-                    <input type="text" class="form-control" name="" id="" formControlName="email"
-                        placeholder="Enter email">
-                         <small class="text-danger" *ngIf="!reactiveForm.get('email').valid && reactiveForm.get('email').touched"> 
-                        <small *ngIf="reactiveForm.get('email').errors['emailNotAllowed']">Email not allowed {{reactiveForm.get('email').value}}</small>
-                        Please enter valid email
-                    </small>
+                    <div class="col-md-7 py-2">
+                        <label for="">Username</label>
+                        <input class="form-control" type="text" formControlName="userName"
+                            placeholder="Enter your username">
+                        <small *ngIf="!reactiveForm.get('userName').valid && reactiveForm.get('userName').touched">
+                            <span *ngIf="reactiveForm.get('userName').errors['required']"> Please enter valid
+                                Username</span>
+                            <span
+                                *ngIf="reactiveForm.get('userName').errors['namesNotAllowed']">{{reactiveForm.get('userName').value}}
+                                - is not allowed</span>
+                        </small>
                     </div>
-                <!-- <div class="col-md-7 py-2">
+                    <div class="form-group py-2">
+                        <input type="text" class="form-control" name="" id="" formControlName="email"
+                            placeholder="Enter email">
+                        <small class="text-danger"
+                            *ngIf="!reactiveForm.get('email').valid && reactiveForm.get('email').touched">
+                            <small *ngIf="reactiveForm.get('email').errors['emailNotAllowed']">Email not allowed
+                                {{reactiveForm.get('email').value}}</small>
+                            Please enter valid email
+                        </small>
+                    </div>
+                    <!-- <div class="col-md-7 py-2">
                     
                     <label >Email ID</label>
                     <input  class="form-control" type="email" formControlName="email" placeholder="Enter your email ID">
@@ -32,48 +38,77 @@
                 </small>
                
             </div>         -->
-                <div class="col-md-7">
-                    <label for="allCourse">Course</label>
-                    <select class="form-control" id="allCourse" formControlName="course">
-                        <option disabled>--Select--</option>
-                        <option value="Angular">Angular</option>
-                        <option value="HTML5">HTML5</option>
-                        <option value="Java">Java</option>
-                    </select>
-                </div>
-                <div class="col-md-7 py-3">
-                    <div class="gender" *ngFor="let gender of genders">
-                        <input type="radio" formControlName="Gender" id="{{gender.id}}" value="{{gender.value}}">
-                        <label for="{{gender.id}}">{{gender.value}}</label>
+                    <div class="col-md-7">
+                        <label for="allCourse">Course</label>
+                        <select class="form-control" id="allCourse" formControlName="course">
+                            <option disabled>--Select--</option>
+                            <option value="Angular">Angular</option>
+                            <option value="HTML5">HTML5</option>
+                            <option value="Java">Java</option>
+                        </select>
                     </div>
-                </div>
-
-                <div formGroupName="addressDetails">
-                    <div class="col-md-7 py-2">
-                        <label for="">Parament Address</label>
-                        <input class="form-control" type="text" formControlName="paramentAddress"
-                            placeholder="Enter your Parament Address">
+                    <div class="col-md-7 py-3">
+                        <div class="gender" *ngFor="let gender of genders">
+                            <input type="radio" formControlName="Gender" id="{{gender.id}}" value="{{gender.value}}">
+                            <label for="{{gender.id}}">{{gender.value}}</label>
+                        </div>
                     </div>
-                    <div class="col-md-7 py-2">
-                        <label for="">Pin Code</label>
-                        <input id="pass" class="form-control" type="number" formControlName="pinCode"
-                            placeholder="Enter your pin code">
+
+                    <div formGroupName="addressDetails">
+                        <div class="col-md-7 py-2">
+                            <label for="">Parament Address</label>
+                            <input class="form-control" type="text" formControlName="paramentAddress"
+                                placeholder="Enter your Parament Address">
+                        </div>
+                        <div class="col-md-7 py-2">
+                            <label for="">Pin Code</label>
+                            <input id="pass" class="form-control" type="number" formControlName="pinCode"
+                                placeholder="Enter your pin code">
+                        </div>
+                        <span
+                            *ngIf="!reactiveForm.get('addressDetails').valid && reactiveForm.get('addressDetails').touched">
+                            Please filling complete Address
+                        </span>
+
                     </div>
-                    <span
-                        *ngIf="!reactiveForm.get('addressDetails').valid && reactiveForm.get('addressDetails').touched">
-                        Please filling complete Address
-                    </span>
+                    <div class="button py-2">
+                        <button class="btn btn-success ">Submit</button>
+                    </div>
 
-                </div>
-                <div class="button py-2">
-                    <button class="btn btn-success " >Submit</button>
-                </div>
+                </form>
+            </div>
 
-            </form>           
+            <div class="col">
+ 
+                    <button class="tex-center btn btn-primary" (click)='getData()'>Get Data</button>
+
+                <!-- <table class="table">
+                    <thead>
+                        <tr>
+                            <th>Sr.No</th>
+                            <th>Username</th>
+                            <th>Email ID</th>
+                            <th>Course</th>
+                            <th>Gender</th>
+                            <th>parament Address</th>
+                            <th>Pin Code</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr *ngFor="let data of formData; let i=index ">
+                            <td>{{i+1}}</td>
+                            <td>{{data.username}}</td>
+                            <td>{{data.email}}</td>
+                            <td>{{data.course}}</td>
+                            <td>{{data.Gender}}</td>
+                            <td>{{data.paramentAddress}}</td>
+                            <td>{{data.pinCode}}</td>
+                        </tr>
+                    </tbody>
+                </table> -->
+            </div>
         </div>
     </div>
 </div>
-
-
 
 <!-- [disabled]="!reactiveForm.valid" -->
